feat: new version

--- a/src-tauri/gen/android/app/src/main/res/values/strings.xml
+++ b/src-tauri/gen/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">bc-game</string>
-    <string name="main_activity_title">bc-game</string>
+    <string name="app_name">BG Game Challenge</string>
+    <string name="main_activity_title">BG Game Challenge</string>
 </resources>
